# eps-dependabot-approve

./: .gitallowed  .gitignore  .pre-commit-config.yaml  Makefile  README.md  _config.yml  action.yml  index.html  pyproject.toml
.devcontainer/: devcontainer.json
.github/config/: settings.yml
.github/workflows/: ci.yml  pull_request.yml  release.yml  update_dev_container_version.yml
release_notes/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.4.md
