[project]
python = "^3.14"
name = "eps-dependabot-approve"

[tool.poetry]
name = "eps-dependabot-approve"
description = "eps-dependabot-approve"
version = "0.0.1-alpha"
authors = [
  "EPS Team <eps.tem@nhs.net>"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/eps-dependabot-approve"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"

[tool.poetry.scripts]
